--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -33,10 +33,16 @@ jobs:
     - name: Install Android SDK and Emulator
       run: |
         sudo apt-get update
-        sudo apt-get install -y android-sdk adb
-        sdkmanager --install "system-images;android-30;default;x86_64"
-        sdkmanager --install "platforms;android-30"
-        sdkmanager --install "emulator"
+        sudo apt-get install -y unzip wget
+        mkdir -p $HOME/android-sdk
+        wget https://dl.google.com/android/repository/commandlinetools-linux-10406996_latest.zip -O cmdline-tools.zip
+        unzip cmdline-tools.zip -d $HOME/android-sdk/cmdline-tools
+        mv $HOME/android-sdk/cmdline-tools/cmdline-tools $HOME/android-sdk/cmdline-tools/latest
+        echo "export ANDROID_HOME=$HOME/android-sdk" >> $HOME/.bashrc
+        echo "export PATH=$HOME/android-sdk/cmdline-tools/latest/bin:$HOME/android-sdk/platform-tools:$HOME/android-sdk/emulator:$PATH" >> $HOME/.bashrc
+        source $HOME/.bashrc
+        sdkmanager --version
+        sdkmanager --install "system-images;android-30;default;x86_64" "platforms;android-30" "platform-tools" "emulator"
         sdkmanager --licenses
 
     - name: Create and Start Emulator
