--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -38,18 +38,30 @@ jobs:
         wget https://dl.google.com/android/repository/commandlinetools-linux-10406996_latest.zip -O cmdline-tools.zip
         unzip cmdline-tools.zip -d $HOME/android-sdk/cmdline-tools
         mv $HOME/android-sdk/cmdline-tools/cmdline-tools $HOME/android-sdk/cmdline-tools/latest
+        
+        # Set Android environment variables
         echo "export ANDROID_HOME=$HOME/android-sdk" >> $GITHUB_ENV
         echo "export PATH=$HOME/android-sdk/cmdline-tools/latest/bin:$HOME/android-sdk/platform-tools:$HOME/android-sdk/emulator:$PATH" >> $GITHUB_ENV
         source $GITHUB_ENV
+
+        # Verify sdkmanager is accessible
         ls -la $HOME/android-sdk/cmdline-tools/latest/bin
         $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager --version
-        $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager --install "system-images;android-30;default;x86_64" "platforms;android-30" "platform-tools" "emulator"
-        $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager --licenses
+
+        # Accept licenses
+        yes | $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager --licenses
+
+        # Install required packages
+        $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager --install "platform-tools" "emulator" "platforms;android-30" "system-images;android-30;default;x86_64"
+
+        # Verify installed system images
+        $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager --list
 
     - name: Create and Start Emulator
       run: |
         echo "Creating AVD..."
         echo "no" | $HOME/android-sdk/cmdline-tools/latest/bin/avdmanager create avd -n test_emulator -k "system-images;android-30;default;x86_64" --device "pixel_4"
+
         echo "Starting Emulator..."
         nohup $HOME/android-sdk/emulator/emulator -avd test_emulator -no-snapshot -no-audio -no-window -gpu off &
         sleep 60  # Give time for emulator to start
