--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -38,40 +38,40 @@ jobs:
         wget https://dl.google.com/android/repository/commandlinetools-linux-10406996_latest.zip -O cmdline-tools.zip
         unzip cmdline-tools.zip -d $HOME/android-sdk/cmdline-tools
         mv $HOME/android-sdk/cmdline-tools/cmdline-tools $HOME/android-sdk/cmdline-tools/latest
-        
+
         # Set Android environment variables
         echo "export ANDROID_HOME=$HOME/android-sdk" >> $GITHUB_ENV
         echo "export ANDROID_AVD_HOME=$HOME/.android/avd" >> $GITHUB_ENV
-        echo "export PATH=$HOME/android-sdk/cmdline-tools/latest/bin:$HOME/android-sdk/platform-tools:$HOME/android-sdk/emulator:$PATH" >> $GITHUB_ENV
+        echo "export PATH=$ANDROID_HOME/cmdline-tools/latest/bin:$ANDROID_HOME/platform-tools:$ANDROID_HOME/emulator:$PATH" >> $GITHUB_ENV
         source $GITHUB_ENV
 
-        # Install missing emulator and other SDK components
-        $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager --install "platform-tools" "emulator" "platforms;android-30" "system-images;android-30;default;x86_64"
+        # Install missing emulator and SDK components
+        $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --install "platform-tools" "emulator" "platforms;android-30" "system-images;android-30;default;x86_64"
 
         # Accept SDK licenses
-        yes | $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager --licenses
+        yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --licenses
 
         # Verify installation
-        $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager --list
-        ls -la $HOME/android-sdk/emulator/
+        $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --list
+        ls -la $ANDROID_HOME/emulator/
 
     - name: Create and Start Emulator
       run: |
         echo "Creating AVD..."
-        mkdir -p $HOME/.android/avd
-        echo "no" | $HOME/android-sdk/cmdline-tools/latest/bin/avdmanager create avd -n test_emulator -k "system-images;android-30;default;x86_64" --device "pixel_4"
+        mkdir -p $ANDROID_AVD_HOME
+        echo "no" | $ANDROID_HOME/cmdline-tools/latest/bin/avdmanager create avd -n test_emulator -k "system-images;android-30;default;x86_64" --device "pixel_4"
         
         echo "Verifying AVD..."
-        $HOME/android-sdk/emulator/emulator -list-avds
+        $ANDROID_HOME/emulator/emulator -list-avds
 
         echo "Starting Emulator..."
-        nohup $HOME/android-sdk/emulator/emulator -avd test_emulator -no-snapshot -no-audio -no-window -gpu off &
+        nohup $ANDROID_HOME/emulator/emulator -avd test_emulator -no-snapshot -no-audio -no-window -gpu off &
         sleep 90  # Give time for emulator to start
 
     - name: Verify Emulator
       run: |
-        $HOME/android-sdk/platform-tools/adb devices
-        $HOME/android-sdk/emulator/emulator -list-avds
+        $ANDROID_HOME/platform-tools/adb devices
+        $ANDROID_HOME/emulator/emulator -list-avds
 
     - name: Install Appium and Dependencies
       run: |
