--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -48,16 +48,23 @@ jobs:
         sdkmanager --install "platform-tools" "emulator" "platforms;android-34" "system-images;android-34;google_apis;x86_64"
         yes | sdkmanager --licenses
 
+    - name: Verify SDK Installation
+      run: |
+        echo "Verifying SDK installation..."
+        ls -al $ANDROID_HOME/cmdline-tools/latest/bin
+        ls -al $ANDROID_HOME/platform-tools
+        ls -al $ANDROID_HOME/emulator
+
     - name: Create and Start Emulator
       run: |
         mkdir -p $HOME/.android/avd
         echo "no" | $ANDROID_HOME/cmdline-tools/latest/bin/avdmanager create avd -n test_emulator -k "system-images;android-34;google_apis;x86_64" --device "pixel_4"
 
-        nohup emulator -avd test_emulator -no-snapshot -no-audio -no-window -gpu off &
+        nohup $ANDROID_HOME/emulator/emulator -avd test_emulator -no-snapshot -no-audio -no-window -gpu off &
         sleep 90
 
     - name: Verify Emulator
-      run: adb devices
+      run: $ANDROID_HOME/platform-tools/adb devices
 
     - name: Install Appium and Dependencies
       run: |
