--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -59,7 +59,7 @@ jobs:
       run: |
         mkdir -p $HOME/.android/avd
         echo "no" | $ANDROID_HOME/cmdline-tools/latest/bin/avdmanager create avd -n custom_emulator -k "system-images;android-34;google_apis;x86_64" --device "pixel_4"
-
+        $ANDROID_HOME/emulator/emulator -list-avds
         nohup $ANDROID_HOME/emulator/emulator -avd custom_emulator -no-snapshot -no-audio -no-window -gpu off &
         sleep 90
 
