--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -70,6 +70,7 @@ jobs:
       run: |
         npm install -g appium
         npm install -g @appium/doctor
+        appium driver install uiautomator2
 
     - name: Start Appium Server
       run: nohup appium > appium.log 2>&1 &
