--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -30,52 +30,23 @@ jobs:
       with:
         node-version: 18
 
-    - name: Install Android SDK and Emulator
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y unzip wget
-        mkdir -p $HOME/android-sdk/cmdline-tools
-        wget https://dl.google.com/android/repository/commandlinetools-linux-10406996_latest.zip -O cmdline-tools.zip
-        unzip cmdline-tools.zip -d $HOME/android-sdk/cmdline-tools
-        mv $HOME/android-sdk/cmdline-tools/cmdline-tools $HOME/android-sdk/cmdline-tools/latest
+    - name: Set up JDK 11
+      uses: actions/setup-java@v3
+      with:
+        java-version: 11
+        distribution: 'adopt'
+        cache: 'gradle'
 
-        echo "export ANDROID_HOME=$HOME/android-sdk" >> $GITHUB_ENV
-        echo "export ANDROID_AVD_HOME=$HOME/.android/avd" >> $GITHUB_ENV
-        echo "export PATH=$ANDROID_HOME/cmdline-tools/latest/bin:$ANDROID_HOME/platform-tools:$ANDROID_HOME/emulator:$PATH" >> $GITHUB_ENV
-        source $GITHUB_ENV
-
-        # Install missing emulator and SDK components
-        sdkmanager --install "platform-tools" "emulator" "platforms;android-34" "system-images;android-34;google_apis;x86_64"
-        yes | sdkmanager --licenses
-
-    - name: Verify SDK Installation
-      run: |
-        echo "Verifying SDK installation..."
-        ls -al $ANDROID_HOME/cmdline-tools/latest/bin
-        ls -al $ANDROID_HOME/platform-tools
-        ls -al $ANDROID_HOME/emulator
-
-    - name: Create and Start Emulator
-      run: |
-        mkdir -p $HOME/.android/avd
-        echo "no" | $ANDROID_HOME/cmdline-tools/latest/bin/avdmanager create avd -n custom_emulator -k "system-images;android-34;google_apis;x86_64" --device "pixel_4"
-        echo "Listing available AVDs..."
-        $ANDROID_HOME/emulator/emulator -list-avds
-        echo "Checking AVD directory..."
-        ls -al $HOME/.android/avd
-        nohup $ANDROID_HOME/emulator/emulator -avd custom_emulator -no-snapshot -no-audio -no-window -gpu off &
-        sleep 180
-        echo "Emulator started. Listing devices..."
-        $ANDROID_HOME/platform-tools/adb devices
-
-    - name: Restart ADB Server
-      run: |
-        $ANDROID_HOME/platform-tools/adb kill-server
-        $ANDROID_HOME/platform-tools/adb start-server
-        $ANDROID_HOME/platform-tools/adb devices
-
-    - name: Verify Emulator
-      run: $ANDROID_HOME/platform-tools/adb devices
+    - name: Set up Android Emulator
+      uses: ReactiveCircus/android-emulator-runner@v2
+      with:
+        api-level: 30
+        target: google_apis
+        arch: x86_64
+        profile: pixel_4
+        script: |
+          adb shell input keyevent 82
+          adb devices
 
     - name: Install Appium and Dependencies
       run: |
