--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -37,6 +37,7 @@ jobs:
         target: google_apis
         arch: x86_64
         profile: pixel_4
+        disable-linux-hw-accel: true
         script: |
           adb shell input keyevent 82
           adb devices
