--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -31,7 +31,10 @@ jobs:
         node-version: 18
 
     - name: Install Dependencies
-      run: sudo apt-get update && sudo apt-get install -y libpulse0
+      run: sudo apt-get update && sudo apt-get install -y libpulse0 libxcb-cursor0
+
+    - name: Enable KVM for Hardware Acceleration
+      run: sudo apt-get install -y qemu-kvm libvirt-daemon-system libvirt-clients bridge-utils
 
     - name: Set up Android Emulator
       uses: ReactiveCircus/android-emulator-runner@v2
@@ -40,7 +43,6 @@ jobs:
         target: google_apis
         arch: x86_64
         profile: pixel_4
-        disable-linux-hw-accel: true
         emulator-boot-timeout: 600000
         disable-animations: true
         disable-spellchecker: true
